# EngVision

./: .gitignore  README.md  eng-vision.sln
.aspire/: settings.json
EngVision/: AnalyzeBubbles.csx  EngVision.csproj  Program.cs
EngVision.Api/: EngVision.Api.csproj  EngVision.Api.http  Program.cs
EngVision.Api/Properties/: launchSettings.json
EngVision.AppHost/: AppHost.cs  EngVision.AppHost.csproj  appsettings.json
EngVision.AppHost/Properties/: launchSettings.json
EngVision.Tests/: DimensionMatcherTests.cs  EngVision.Tests.csproj  VisionLlmTests.cs
EngVision.Web/: index.html  package-lock.json  package.json  vite.config.ts
EngVision.Web/src/: App.css  App.tsx  api.ts  index.css  main.tsx  types.ts
EngVision/Models/: ComparisonResult.cs  DetectedRegion.cs  EngVisionConfig.cs  GroundTruthAnnotation.cs  MeasurementData.cs  PipelineResult.cs
EngVision/Services/: AzureBubbleOcrService.cs  (+14 more)
Output/: new_annotations.json
docs/: README.md  api-reference.md  architecture.md  bubble-detection.md  llm-extraction.md  pipeline.md  table-ocr.md
engvision-py/: README.md  debug_captures.py  pyproject.toml
engvision-py/src/engvision/: __init__.py  annotation_store.py  app.py  config.py  models.py
engvision-py/src/engvision/services/: __init__.py  azure_bubble_ocr.py  azure_table_ocr.py  bubble_detection.py  bubble_ocr.py  dimension_matcher.py  leader_line_tracer.py  llm_bubble_ocr.py  pdf_renderer.py  pipeline.py  segment_export.py  table_detection.py  table_ocr.py  vision_llm.py
engvision-py/tests/: test_leader_direction.py
scripts/: AnalyzeBubbles.cs
(+11 files in other folders)
