[project]
name = "engvision"
version = "0.1.0"
description = "Engineering Vision - PDF analysis pipeline for CAD drawings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "opencv-python-headless>=4.10.0",
    "pymupdf>=1.25.0",
    "pytesseract>=0.3.13",
    "openai>=1.60.0",
    "python-dotenv>=1.0.1",
    "numpy>=1.26.0",
    "Pillow>=11.0.0",
]

[project.scripts]
engvision = "engvision.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engvision"]
